Fixed responsiveness on mobile

--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ a {
 }
 
 @media only screen and (max-width: 600px) {
-    #main-card-container {
+    .card-container {
         width: 90%;
     }
     #logo-container {
